--- a/docs/content/summary.tex
+++ b/docs/content/summary.tex
@@ -1,3 +1,9 @@
 %----------------------------------------------------------------------------
 \chapter{Summary}
 %----------------------------------------------------------------------------
+
+\begin{itemize}
+	\item
+	\item the importance of asynchronous funtionality (see io and network-delay fault profile analysis)
+	\item adding third party tools to the system to solve a problem may introduce other complexities
+\end{itemize}
