[DOC] Write Problem definition part

--- a/docs/bib/mybib.bib
+++ b/docs/bib/mybib.bib
@@ -289,3 +289,9 @@ https://inf.mit.bme.hu/sites/default/files/materials/category/kateg%C3%B3ria/okt
 	howpublished = {\url{https://kubernetes.io/docs/concepts/scheduling-eviction/node-pressure-eviction/} (accessed at 02/04/2022)},
 	title        = {{N}ode-pressure {E}viction},
 }
+
+@misc{CLoudComputingStatistics,
+	author       = {{Jack Steward}},
+	howpublished = {\url{https://findstack.com/cloud-computing-statistics/} (accessed at 12/04/2022)},
+	title        = {{T}he {U}ltimate {L}ist of {C}loud {C}omputing {S}tatistics 2022},
+}
