--- a/docs/content/introduction.tex
+++ b/docs/content/introduction.tex
@@ -6,12 +6,15 @@
 \section{Problem Definition}
 %----------------------------------------------------------------------------
 
-\begin{itemize}
-	\item enterprise cloud adoption is growing fast (https://findstack.com/cloud-computing-statistics/)
-	\item lot of critical applications move to the cloud (banking, telco, datastores, software companies, tools) (TODO source)
-	\item many of the cloud base applications can be viewed as critical systems (lot of money at stake, communication at stake - implicitly can cause human harm, \etc)
-	\item \etc
-\end{itemize}
+One of the most popular today's trend in the IT industry is the cloud and the migration of enterprise workloads from private data centers into public cloud solutions. This direction is not surprising as cloud computing offers a lot of benefits for companies like minimizing operational costs, flexibility, ease of use -- just to mention a few \cite{CLoudComputingStatistics}. The growing pace of enterprise cloud adoption causes, that more and more applications move into the reigns of public cloud providers. It is not uncommon that these cloud based applications support some fundamental aspects of everyday life like online banking, telecommunications, healthcare, so they can be viewed -- without exaggeration -- critical systems that require a certain level of reliability from the underlying infrastructure.
+
+Kubernetes became the de facto standard for managing cloud based systems as it provides a vastly configurable, modular way of deploying and operating distributed, container based applications. However, the high abstraction layer, that Kubernetes brings into the creation and the maintenance of applications causes some earlier well defined concepts such as dependability harder to guarantee and reason about.
+%\begin{itemize}
+%	\item enterprise cloud adoption is growing fast (https://findstack.com/cloud-computing-statistics/)
+%	\item lot of critical applications move to the cloud (banking, telco, datastores, software companies, tools) (TODO source)
+%	\item many of the cloud base applications can be viewed as critical systems (lot of money at stake, communication at stake - implicitly can cause human harm, \etc)
+%	\item \etc
+%\end{itemize}
 
 %----------------------------------------------------------------------------
 \section{Motivation}
