[DOC] Thesis structure

--- a/docs/content/introduction.tex
+++ b/docs/content/introduction.tex
@@ -64,13 +64,15 @@ Lastly, the measurement results should be presented and evaluated, summarizing t
 \section{Thesis structure}
 %----------------------------------------------------------------------------
 
-\begin{itemize}
-	\item to make the results and the thinking easier to comprehend, the thesis in the following way
-	\item background
-	\item sample application - design and implementation - this will be used the demonstrate the features of the test framework
-	\item test framework
-	\item enhancements - alternatives to improve the dependability of the sample application
-\end{itemize}
+The thesis documentation is structured in a way to attempt allowing straightforward comprehension. The thesis first gives a brief overview about the background knowledge used throughout the project, listing and describing the technologies and concepts applied during the work (see Chapter \ref{background}). This chapter is followed by the detailed presenting of the sample application that is will be used to demonstrate the features of the test framework (see Chapter \ref{sample-app}). The test framework is introduced in the Chapter \ref{test-framework} including both the related aspects of design and implementation. Then the possible alternatives for improving dependability and two implementations are described in Chapter \ref{enhancements}.
+
+%\begin{itemize}
+%	\item to make the results and the thinking easier to comprehend, the thesis in the following way
+%	\item background
+%	\item sample application - design and implementation - this will be used the demonstrate the features of the test framework
+%	\item test framework
+%	\item enhancements - alternatives to improve the dependability of the sample application
+%\end{itemize}
 
 
 
