--- a/docs/content/sample-application.tex
+++ b/docs/content/sample-application.tex
@@ -1,5 +1,5 @@
 %----------------------------------------------------------------------------
-\chapter{Sample application}
+\chapter{Sample application} \label{sample-app}
 %----------------------------------------------------------------------------
 
 This chapter presents the design and implementation of the sample application which will act as a case-study to showcase the features of the test framework and to serve as a basis for future enhancements. 
