--- a/docs/content/test-framework.tex
+++ b/docs/content/test-framework.tex
@@ -1,5 +1,5 @@
 %----------------------------------------------------------------------------
-\chapter{Test Framework}
+\chapter{Test Framework} \label{test-framework}
 %----------------------------------------------------------------------------
 
 This chapter presents the design and implementation of the test framework that facilitates the automatic deployment of the sample application and running the measurements to determine the dependability metrics of the system.
