--- a/docs/content/background.tex
+++ b/docs/content/background.tex
@@ -1,5 +1,5 @@
 %----------------------------------------------------------------------------
-\chapter{Background}
+\chapter{Background} \label{background}
 %----------------------------------------------------------------------------
 
 
